--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.15.3",
     "paypal-rest-sdk": "^1.7.1",
     "pug": "^2.0.0-rc.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
